--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ importFrom(methods,is)
 importFrom(sl3,Lrnr_mean)
 importFrom(sl3,make_learner)
 importFrom(stats,qnorm)
+importFrom(tmle3,LF_fit)
 importFrom(tmle3,Param_base)
 importFrom(tmle3,Targeted_Likelihood)
 importFrom(tmle3,define_lf)
+importFrom(tmle3,make_CF_Likelihood)
 importFrom(tmle3,tmle3_Spec)
 importFrom(tmle3,tmle3_Update)
 importFrom(uuid,UUIDgenerate)
