--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,28 @@
 
 export(LF_fit_site)
 export(Param_AET)
-export(Param_SCT)
+export(Param_AOT)
+export(Param_SOT)
+export(df_time)
+export(dm_to_sm)
 export(expit)
+export(l2_loss)
 export(logit)
-export(point_tr_likelihood)
-export(point_tr_npsem)
-export(point_tr_task)
-export(survival_tr_likelihood)
-export(survival_tr_npsem)
-export(survival_tr_task)
+export(long_to_mat)
+export(point_e_likelihood)
+export(point_e_npsem)
+export(point_o_likelihood)
+export(point_o_npsem)
+export(point_task)
+export(survival_o_likelihood)
+export(survival_o_npsem)
+export(survival_task)
 export(tmle3_Spec_AET)
-export(tmle3_Spec_SCT)
+export(tmle3_Spec_AOT)
+export(tmle3_Spec_SOT)
 export(tmle_AET)
-export(tmle_SCT)
+export(tmle_AOT)
+export(tmle_SOT)
 export(wald_ci)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
