import data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(tmle_AET)
 export(tmle_AOT)
 export(tmle_SOT)
 export(wald_ci)
+import(data.table)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(methods,is)
