--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,5 @@ Description: What the package does (one paragraph).
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1.9000
+Imports: data.table
