--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(LF_fit_site)
 export(Param_AET)
 export(Param_AOT)
 export(Param_SOT)
+export(deltaMeanLogistic)
+export(deltaMeanOLS)
 export(df_time)
 export(dm_to_sm)
 export(expit)
