alt robust test alpha

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(point_e_npsem)
 export(point_o_likelihood)
 export(point_o_npsem)
 export(point_task)
+export(prob_clip)
 export(survival_o_likelihood)
 export(survival_o_npsem)
 export(survival_task)
