--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(LF_fit_site)
 export(Param_AET)
 export(Param_AOT)
+export(Param_SET)
 export(Param_SOT)
 export(deltaMeanLogistic)
 export(deltaMeanOLS)
@@ -18,15 +19,20 @@ export(point_o_likelihood)
 export(point_o_npsem)
 export(point_task)
 export(prob_clip)
+export(survival_e_likelihood)
+export(survival_e_npsem)
 export(survival_o_likelihood)
 export(survival_o_npsem)
 export(survival_task)
 export(tmle3_Spec_AET)
 export(tmle3_Spec_AOT)
+export(tmle3_Spec_SET)
 export(tmle3_Spec_SOT)
 export(tmle_AET)
 export(tmle_AOT)
+export(tmle_SET)
 export(tmle_SOT)
+export(transform_data)
 export(wald_ci)
 import(data.table)
 importFrom(R6,R6Class)
