--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ export(Param_SOT)
 export(deltaMeanLogistic)
 export(deltaMeanOLS)
 export(df_time)
-export(dm_to_sm)
 export(expit)
+export(hm_to_sm)
 export(l2_loss)
 export(logit)
 export(long_to_mat)
