--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(Param_SOT)
 export(deltaMeanLogistic)
 export(deltaMeanOLS)
 export(df_time)
+export(ditch)
 export(expit)
 export(hm_to_sm)
 export(l2_loss)
